tests/ui/consts/long-constant-evaluation-cause-ice-in-sty.stderr
error: constant evaluation is taking a long time
  --> $DIR/long-constant-evaluation-cause-ice-in-sty.rs:3:7
   |
LL |   [0; loop{}];
   |       ^^^^^^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/long-constant-evaluation-cause-ice-in-sty.rs:3:7
   |
LL |   [0; loop{}];
   |       ^^^^^^
   = note: `#[deny(long_running_const_eval)]` on by default

error: aborting due to 1 previous error

